# ConsoleCrawler

./: .gitignore  CMakeLists.txt  makefile
src/: .#makefile  main.c  main.h
src/Enemy/: enemy.c  enemy.h
src/GameUtilities/: environment.c  environment.h  objects.h  position.h
src/List/: list.c  list.h
src/Player/: playerController.c  playerController.h
src/UI/: UIUtilies.c  UIUtilies.h  escCodes.h  setupUI.c  setupUI.h  tickBox.c  tickBox.h
